# gpt_manager

./: .gitignore  docker-compose-sglang-router.yml  docker-compose-sglang.yml  gateway_config.json  main.py  pyproject.toml  run.py  test_basic.py
frontend/: next.config.js  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo
frontend/src/app/: globals.css
frontend/src/app/(main)/: layout.tsx  page.tsx
frontend/src/app/(main)/gateway/: page.tsx
frontend/src/app/(main)/models/: page.tsx
frontend/src/app/(main)/settings/: page.tsx
frontend/src/components/: Layout.tsx
frontend/src/lib/: api.ts
src/gateway_manager/: __init__.py  main.py
src/gateway_manager/api/: routes.py
src/gateway_manager/core/: backend_manager.py  config_manager.py  constants.py  docker_manager.py  gateway_manager.py  model_manager.py
src/gateway_manager/models/: schemas.py
src/gateway_manager/static/css/: style.css
src/gateway_manager/static/js/: api.js  dashboard.js  gateway.js  models.js  settings.js
src/gateway_manager/templates/: gateway.html  index.html  models.html  settings.html
